# frictionless-monitoring

./: .gitignore  README.md  game.html  requirements.txt  start.sh
docs/: api.md
esp32/: codecell_ble.ino  esp32_uart.ino
gui/: .env.local  package-lock.json  package.json
gui/public/: index.html
gui/src/: App.js  GameApp.js  gameConfig.js
gui/src/components/: ControlPanel.js  DataPanel.js  GameCanvas.js  GameSidebar.js  GameView.js  MainDisplay.js  MonitorView.js  SpeedSparkline.js  VelocityGame.js
gui/src/config/: network.js
gui/src/hooks/: useConstantVelocityGame.js
gui/src/services/: controlService.js  dataService.js
src/: FakeDataStream.py  camera.py  controller_app.py  cpp_stream_bridge.py  data_structures.py  frame_decoder.py  kinematics.py  memory.py  monitor.py  pcb_simulator.py  stdout_to_udp.py  webcam_game_stream.py
src/camera/: FakeDataStream.py  calib_intrinsics.py  camera.py  cpp_stream_bridge.py  data_structures.py  frame_decoder.py  kinematics.py  memory.py  monitor.py
src/controller/: controller_app.py  esp32_simulator.py  pcb_simulator.py
vision/: CMakeLists.txt  README.md  main.cpp
